opam-version: "2.0"
name: "OCaml-mongoc"
version: "0.1.0"
maintainer: "Cédric Le Moigne <cedlemo@gmx.com>"
authors: "Cédric Le Moigne <cedlemo@gmx.com>"
homepage: "https://github.com/cedlemo/OCaml-mongoc"
bug-reports: "https://github.com/cedlemo/OCaml-mongoc/issues"
license: "GPL3"
dev-repo: "git+https://github.com/cedlemo/OCaml-mongoc.git"
synopsis: "OCaml bindings for the libmongo C library (http://mongoc.org/libmongoc/current/)"
description: "This library provides bindings based on Ctypes the libmongoc API (see http://mongoc.org/libmongoc/current/api.html)"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"
  "dune" {>= "1.2"}
  "ctypes"
  "ctypes-foreign"
  "alcotest"
  "memcpy"
  "base"
  "stdio"
  "configurator"
  "re"
  "conf-pkg-config" {build}
  "bsonc"
]
